# bespoke

./: CHANGELOG.md  collections.csv  learning-from-givens.cabal  learning-from-givens.cabal.previous  pixel-prestige.csv
executables/learning-from-givens/: Main.hs
