cabal-version: 3.0
name: learning-from-givens
version: 0.1.0.0
author: kindaro@gmail.com
maintainer: Ignat Insarov
license: GPL-3.0-only

common commons
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -Wall

library
  import: commons
  hs-source-dirs: library
  exposed-modules: MyLib
  build-depends: base

executable learning-from-givens
  import: commons
  hs-source-dirs: executables/learning-from-givens
  main-is: Main.hs
  build-depends: base, learning-from-givens
