cabal-version: 3.0
name: learning-from-givens
version: 0.1.0.0
author: kindaro@gmail.com
maintainer: Ignat Insarov
license: GPL-3.0-only

common commons
  build-depends:
    , base
    , base-unicode-symbols
    , bytestring
    , cassava
    , fancy
    , text >= 2
    , vector
    , pretty-show
    , unordered-containers
    , witherable
    , hashable
    , containers
    , regex-tdfa

  default-language: GHC2021
  default-extensions: BlockArguments OverloadedStrings ScopedTypeVariables UnicodeSyntax NoImplicitPrelude OverloadedStrings
  ghc-options: -Wall -Wextra -Wno-star-is-type

library
  import: commons
  hs-source-dirs: library
  exposed-modules: MyLib

executable learning-from-givens
  import: commons
  hs-source-dirs: executables/learning-from-givens
  main-is: Main.hs
  build-depends: learning-from-givens
